# cap-x

./: .gitignore  MACOS_SETUP.md  README.md  pyproject.toml
capx/envs/: launch.py
capx/envs/simulators/: __init__.py  robosuite_base.py  robosuite_handover.py  robosuite_multi_cubes.py  robosuite_multi_objects.py  robosuite_nut_assembly.py  robosuite_two_arm_lift.py
capx/envs/tasks/franka/: franka_multi_cube.py
capx/integrations/: __init__.py
capx/integrations/franka/: common.py  control_privileged.py  spill_wipe_privileged.py
capx/integrations/motion/: pyroki.py
capx/serving/: launch_sam3_server.py  multi_provider_server.py
capx/utils/: launch_utils.py  serve_utils.py
capx/web/: async_trial_runner.py  models.py  server.py
scripts/: start_macos.sh
web-ui/src/: App.tsx
web-ui/src/components/: ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  ConfigStartControl.tsx  VisualizationPanel.tsx
web-ui/src/hooks/: useTrialState.ts
web-ui/src/types/: messages.ts
