[project]
name = "capx"
version = "0.1.0"
description = "CaP-X: Code-as-Policies eXtended with RL for V(L)A code-as-action with simulators (LIBERO/robosuite/BEHAVIOR)."
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = { text = "MIT" }
authors = [
  { name = "CaP-X Authors" }
]
keywords = ["reinforcement-learning", "LLM", "VLM", "robotics", "VeRL", "GRPO", "PPO"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.26",
  "torch>=2.8 ; sys_platform == 'linux'",
  "torchvision>=0.23 ; sys_platform == 'linux'",
  "tyro>=0.8.5",
  "pydantic>=2.7",
  "rich>=13.7",
  "scipy>=1.12",
  "matplotlib>=3.10",
  "imageio[ffmpeg]",
  "requests",
  "tqdm",
  "h5py",
  "einops ; sys_platform == 'linux'",
  "decord ; sys_platform == 'linux'",
  "pycocotools ; sys_platform == 'linux'",
  "pyyaml",
  "omegaconf",
  "open3d ; sys_platform == 'linux'",
  "pyroki @ git+https://github.com/chungmin99/pyroki.git",
  "robot_descriptions>=1.16.0",
  "yourdfpy>=0.0.56",
  "viser>=0.2.0",
  "trimesh>=4.4.0",
  "imageio[ffmpeg]>=0.6.0",
  "sam3 ; sys_platform == 'linux'",
  "msgpack_numpy",
  "ray==2.48.0 ; sys_platform == 'linux'",
  "mediapy>=1.2.5",
  "uvicorn",
  "fastapi",
  "transformers ; sys_platform == 'linux'",
  "openai",
  "pyrender ; sys_platform == 'linux'",
  "opencv-python-headless",
  "pillow>=10",
  "cloudpickle",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-timeout>=2.3",
  "ruff",
  "mypy>=1.10",
  "pillow>=10",
  "requests>=2.32",
]

libero = [
  "libero ; sys_platform == 'linux'",
  "robosuite ; sys_platform == 'linux'",
  "easydict==1.9 ; sys_platform == 'linux'",
  "robomimic==0.2.0 ; sys_platform == 'linux'",
  "einops==0.4.1 ; sys_platform == 'linux'",
  "thop==0.1.1-2209072238 ; sys_platform == 'linux'",
  "bddl==1.0.1 ; sys_platform == 'linux'",
  "future==0.18.2 ; sys_platform == 'linux'",
  "cloudpickle==2.1.0 ; sys_platform == 'linux'",
  "gym==0.25.2 ; sys_platform == 'linux'",
  "scikit-learn ; sys_platform == 'linux'",
]
robosuite = [
  "robosuite"
]
molmo = [
  "torch==2.9.1 ; sys_platform == 'linux'",
  "vllm==0.15.0 ; sys_platform == 'linux' and extra == 'molmo'",
  "tensorflow ; sys_platform == 'linux'",
  "accelerate ; sys_platform == 'linux'",
]
curobo = [
  "nvidia-curobo ; sys_platform == 'linux'",
  "warp-lang>=0.9.0 ; sys_platform == 'linux'",
  "numpy-quaternion ; sys_platform == 'linux'",
  "scikit-image ; sys_platform == 'linux'",
]
contactgraspnet = [
  "contact_graspnet_pytorch ; sys_platform == 'linux'",
  "pyrender ; sys_platform == 'linux'",
  "opencv-python-headless",
]
ovdet = [
  "transformers>=4.41",
  "pillow>=10",
  "requests>=2.32",
]
verl = [
  "torch==2.8.0 ; sys_platform == 'linux'",
  "vllm==0.11.0 ; sys_platform == 'linux' and extra == 'verl'",
  "verl ; sys_platform == 'linux'",
  "datasets>=4.1.1 ; sys_platform == 'linux'",
  "pyarrow>=15 ; sys_platform == 'linux'",
  "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.8cxx11abiTRUE-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux'",
  "pyarrow>=21.0.0 ; sys_platform == 'linux'",
  "uvloop==0.21.0 ; sys_platform == 'linux'",
]

[tool.uv.sources]
robosuite = [
  { path = "capx/third_party/robosuite", extra = "robosuite", editable = true},
  { path = "capx/third_party/libero_dependencies/robosuite", extra = "libero", editable = true },
]
libero = [
  { path = "capx/third_party/LIBERO-PRO", extra = "libero", editable = true},
]
verl = { path = "capx/third_party/verl", marker = "sys_platform == 'linux'" }
contact_graspnet_pytorch = { path = "capx/third_party/contact_graspnet_pytorch", editable = true, marker = "sys_platform == 'linux'" }
sam3 = { path = "capx/third_party/sam3", editable = true, marker = "sys_platform == 'linux'" }
nvidia-curobo = { path = "capx/third_party/curobo", editable = true, marker = "sys_platform == 'linux'" }

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
override-dependencies = [
    "transformers<5.0 ; sys_platform == 'linux'",
    "PyOpenGL==3.1.6 ; sys_platform == 'linux'",
    "PyOpenGL-accelerate==3.1.6 ; sys_platform == 'linux'",
    "numpy==1.26.4 ; sys_platform == 'linux'",
    "numpy>=1.26 ; sys_platform == 'darwin'",
    "opencv-python-headless<4.13",
    "opencv-python ; sys_platform == 'never'",
    "jax<0.4.30",
    "jaxlib<0.4.30",
]
conflicts = [
  [
    { extra = "robosuite" },
    { extra = "libero" },
  ],
    [
    { extra = "molmo" },
    { extra = "robosuite" },
  ],
  [
    { extra = "molmo" },
    { extra = "verl" },
  ],
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["capx*"]
exclude = ["tests*", "configs*"]

[tool.uv.extra-build-dependencies]
egl-probe = ["cmake<3.27"]
pointnet2 = ["torch"]
knn = ["torch"]
flash-attn = ["torch"]
contact-graspnet-pytorch = ["numpy"]
nvidia-curobo = ["torch"]

[tool.uv.workspace]
exclude = [
    "capx/third_party/b1k",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["N803", "UP047", "N806", "F401", "E501"]
force-exclude = true
extend-exclude = [
  "capx/third_party/**",
  "third_party/**",
  "tests/**",
  "scripts/**",
  "outputs/**",
]

[tool.ruff.lint.per-file-ignores]
"capx/third_party/**" = ["ALL"]


[tool.setuptools.package-data]
"capx.envs" = [
  "assets/ur5_pick_place/*.xml",
  "assets/ur5_pick_place/ur5e/*.obj",
  "assets/ur5_pick_place/robotiq_2f85/*.stl",
]
